after fixing the Article tutor api's of the admin section and the , fixing the issue of the currentstreak (this commit includes the admin tasks gets done on the weekend also)